[package]
name = "axum-file-upload"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
urlencoding = "2.1"
tokio-stream = "0.1"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rayon = "1.7"


